[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-cli"
version = "0.1.0"
description = "Command-line client for the journal API."
requires-python = ">=3.9"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
journal = "main:cli"

[tool.setuptools]
py-modules = ["main", "health"]
